# django-alchemy

./: .env-dist  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
catalog/: config.py  container.py  interfaces.py  ioc.py
catalog/main/: asgi.py  integrations.py  settings.py  urls.py  wsgi.py
catalog/main/application/: interfaces.py  services.py
catalog/main/domain/: entities.py
catalog/main/infrastructure/: cookies.py  db.py  middleware.py  redis.py  sessions.py
catalog/migrations/: env.py
catalog/migrations/versions/: 364f267219d7_create_products_table.py  42f95aaccd26_add_more_to_products.py  848d7736a97e_create_products_table.py
catalog/products/application/: dto.py  interactors.py  interfaces.py  services.py  types.py
catalog/products/controllers/: schemas.py  views.py
catalog/products/domain/: entities.py
catalog/products/infrastructure/: models.py  repositories.py
catalog/users/application/: dto.py  errors.py  interactors.py  interfaces.py  services.py
catalog/users/controllers/: schemas.py  views.py
catalog/users/domain/: entities.py
catalog/users/infrastructure/: middleware.py  models.py  repositories.py  security.py
